--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,11 @@
+import 
+
 * {
     box-sizing: border-box;
   }
   
   body {
-    background: linear-gradient(90deg, #09203f 0%, #537895 50%, #09203f 100%);
+    background-image: url('./images/bg.jpg');
     background-size: 100vw;
     color: #fff;
     font-family: Arial, Helvetica, sans-serif;
